tests/parser/should_fail/type_annotation_4.csp
f :: Eqs a => a
f = 0
